--- a/404.html
+++ b/404.html
@@ -126,8 +126,8 @@
         </div>
         <div class="nav-links">
             <ul id="nav-ul" class="nav-ul">
-                <li><a class="navlink-border click-link" href="javascript:void(0);"><span class="main-link"><img class="main-nav-icon" src="./src/assets/Navicons/icons8-home-page-96.png" alt="">home</span></a></li>
-                <li class="sub-nav"><a class="navlink-border" href="javascript:void(0);"><span class="main-link"><img class="main-nav-icon" src="./src/assets/Navicons/icons8-info-128.png" alt="">about</span><i class="arrow fa fa-angle-right"></i></a>
+                <li><a class="navlink-border click-link" href="javascript:void(0);"><span class="main-link"><img class="main-nav-icon" src="https://velocitaracing.github.io/src/src/assets/Navicons/icons8-home-page-96.png" alt="">home</span></a></li>
+                <li class="sub-nav"><a class="navlink-border" href="javascript:void(0);"><span class="main-link"><img class="main-nav-icon" src="https://velocitaracing.github.io/src/src/assets/Navicons/icons8-info-128.png" alt="">about</span><i class="arrow fa fa-angle-right"></i></a>
                     <ul class="dropdown">
                         <span class="sub-nav-heading">know us</span>
                         <span class="sub-nav-underline underline"></span>
@@ -161,7 +161,7 @@
                         <span class="circle"></span>
                     </ul>
                 </li>
-                <li class="sub-nav"><a class="navlink-border" href="javascript:void(0);"><span class="main-link"><img class="main-nav-icon" src="./src/assets/Navicons/icons8-drafting-compass-100.png" alt="">careers</span><i class="arrow fa fa-angle-right"></i></a>
+                <li class="sub-nav"><a class="navlink-border" href="javascript:void(0);"><span class="main-link"><img class="main-nav-icon" src="https://velocitaracing.github.io/src/src/assets/Navicons/icons8-drafting-compass-100.png" alt="">careers</span><i class="arrow fa fa-angle-right"></i></a>
                     <ul class="dropdown">
                         <span class="sub-nav-heading">careers at velocita</span>
                         <span class="sub-nav-underline underline"></span>
@@ -195,7 +195,7 @@
                         <span class="circle"></span>
                     </ul>
                 </li>
-                <li class="sub-nav"><a class="navlink-border" href="javascript:void(0);"><span class="main-link"><img class="main-nav-icon" src="./src/assets/Navicons/icons8-helping-hand-100.png" alt="">sponsors</span><i class="arrow fa fa-angle-right"></i></a>
+                <li class="sub-nav"><a class="navlink-border" href="javascript:void(0);"><span class="main-link"><img class="main-nav-icon" src="https://velocitaracing.github.io/src/src/assets/Navicons/icons8-helping-hand-100.png" alt="">sponsors</span><i class="arrow fa fa-angle-right"></i></a>
                     <ul class="dropdown">
                         <span class="sub-nav-heading">partner progarm</span>
                         <span class="sub-nav-underline underline"></span>
@@ -220,8 +220,8 @@
                         <span class="circle"></span>
                     </ul>
                 </li>
-                <li><a class="navlink-border click-link" href=""><span class="main-link"><img class="main-nav-icon" src="./src/assets/Navicons/icons8-shopaholic-96.png" alt="">shop</span></a></li>
-                <li class="sub-nav"><a class="navlink-border" href="javascript:void(0);"><span class="main-link"><img class="main-nav-icon" src="./src/assets/Navicons/icons8-view-more-100.png" alt="">more</span><i class="arrow fa fa-angle-right"></i></a>
+                <li><a class="navlink-border click-link" href=""><span class="main-link"><img class="main-nav-icon" src="https://velocitaracing.github.io/src/src/assets/Navicons/icons8-shopaholic-96.png" alt="">shop</span></a></li>
+                <li class="sub-nav"><a class="navlink-border" href="javascript:void(0);"><span class="main-link"><img class="main-nav-icon" src="https://velocitaracing.github.io/src/src/assets/Navicons/icons8-view-more-100.png" alt="">more</span><i class="arrow fa fa-angle-right"></i></a>
                     <ul class="dropdown">
                         <span class="sub-nav-heading">more from velocita</span>
                         <span class="sub-nav-underline underline"></span>
@@ -254,7 +254,7 @@
                         <span class="circle"></span>
                     </ul>
                 </li>
-                <li><a class="navlink-border click-link" href=""><span class="main-link"><img class="main-nav-icon" src="./src/assets/Navicons/icons8-call-male-96.png" alt="">contact</span></a></li>
+                <li><a class="navlink-border click-link" href=""><span class="main-link"><img class="main-nav-icon" src="https://velocitaracing.github.io/src/src/assets/Navicons/icons8-call-male-96.png" alt="">contact</span></a></li>
             </ul>
             <!-- <span class="mob-nav-box-one"></span>
             <span class="mob-nav-box-two">version 3.1</span> -->
