--- a/sponsors/brochure/index.html
+++ b/sponsors/brochure/index.html
@@ -28,7 +28,7 @@
 
     <!-- General/ Facebook -->
     <meta property="og:title" content="Brochure | Velocita Racing | INDIA" />
-    <meta property="og:url" content="https://velocitaracing.github.io" />
+    <meta property="og:url" content="https://velocitaracing.github.io/sponsors/brochure" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka." />
     <meta property="og:image" content="https://velocitaracing.github.io/src/assets/Logo/image.png" />
