--- a/404.html
+++ b/404.html
@@ -385,7 +385,7 @@
     <!-- Scripts -->
 
         <!-- Preloader -->
-        <script src="https://velocitaracing.github.io/src/js/preloader.js"></script>
+        <script src="https://velocitaracing.github.io/src/js/preLoader.js"></script>
 
         <!-- Mobile Navbar -->
         <script src="https://velocitaracing.github.io/src/js/mobnav.js"></script>
