--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="click-link" href="/sponsors">
+                            <a class="click-link" href="/sponsors/partner-with-us">
                                 <img class="nav-icon" src="./src/assets/Navicons/icons8-helping-hand-100.png" alt="">
                                 <span class="sub-main">
                                    <span>partner with us<i class="sub-main-arrow fa fa-angle-right"></i></span>
@@ -259,7 +259,7 @@
                         <span class="circle"></span>
                     </ul>
                 </li>
-                <li><a class="navlink-border click-link" href=""><span class="main-link"><img class="main-nav-icon" src="./src/assets/Navicons/icons8-shopaholic-96.png" alt="">shop</span></a></li>
+                <li><a class="navlink-border click-link" target="_blank" href="https://narkha.com/collections/velocita-racing"><span class="main-link"><img class="main-nav-icon" src="./src/assets/Navicons/icons8-shopaholic-96.png" alt="">shop</span></a></li>
                 <li class="sub-nav"><a class="navlink-border" href="javascript:void(0);"><span class="main-link"><img class="main-nav-icon" src="./src/assets/Navicons/icons8-view-more-100.png" alt="">more</span><i class="arrow fa fa-angle-right"></i></a>
                     <ul class="dropdown">
                         <span class="sub-nav-heading">more from velocita</span>
@@ -529,7 +529,7 @@
                     <!-- <h3>coming soon</h3> -->
                     <span class="about-intro">Become a part of the FSAE community.</span>
                 </div>
-                <button class="primaryButton">learn more</button>
+                <a href="./careers/"><button class="primaryButton">learn more</button></a>
             </div>
             <div class="right">
                 <div class="blue-box-container">
@@ -559,7 +559,7 @@
                     <span class="about-careers">Start your career with velocita racing. Velocita Racing provides a wide range of experience and opportunity to express your skills and talent.
                         We cover both technical and non technical aspects of Learning. Stay tuned for our recruitment drive.</span>
                 </div>
-                <button class="primaryButton">learn more</button>
+                <a href="./careers/"><button class="primaryButton">learn more</button></a>
             </div>
             <div class="right">
                 <div data-aos="zoom-in" class="career-circle career-circle-one"><img class="career-image" src="./src/assets/Careers/B Plan.svg" alt=""><span>business plan</span></div>
@@ -624,7 +624,7 @@
                         Connect with large number of potential customers. 
                     </span>
                 </div>
-                <button class="primaryButton">learn more</button>
+                <a href="./sponsors/"><button class="primaryButton">learn more</button></a>
             </div>
             <div class="right">
                 <div class="blue-box-container">
@@ -654,7 +654,7 @@
                         We believe in being the innovator rather than being the imitator which drives us to work on our ideas and make them a reality that is near perfect.
                     </span>
                 </div>
-                <button class="primaryButton">learn more</button>
+                <a href="./sponsors/partner-with-us/"><button class="primaryButton">learn more</button></a>
             </div>
             <div class="right">
                 <div class="container">
@@ -701,7 +701,7 @@
                         It's been an amazing journey through the year!
                     </span>
                 </div>
-                <button class="primaryButton">learn more</button>
+                <a href="./sponsors/"><button class="primaryButton">learn more</button></a>
             </div>
         </div>
         <div class="sub-container">
@@ -759,7 +759,7 @@
                     <!-- <h3>coming soon</h3> -->
                     <span class="about-intro"></span>
                 </div>
-                <button class="primaryButton">shop now</button>
+                <a target="_blank" href="https://narkha.com/collections/velocita-racing"><button class="primaryButton">shop now</button></a>
             </div>
             <div class="right">
                 <div class="blue-box-container">
@@ -791,7 +791,7 @@
                         <br><br> New Summer Collection out now! Shop now on Narkha and avail a flat 20% off on our merchandise.
                     </span>
                 </div>
-                <button class="primaryButton">shop now</button>
+                < <a target="_blank" href="https://narkha.com/collections/velocita-racing"><button class="primaryButton">shop now</button></a>
             </div>
             <div class="right">
                 <div class="swiper-container mySwiper">
@@ -832,7 +832,7 @@
                         Formula Student. Here, I bring you all the stories, experiences and science that makes working in an FSAE or Formula Student team so exciting. 
                     </span>
                 </div>
-                <button class="primaryButton">listen now</button>
+                <a target="_blank" href="https://anchor.fm/pranay-ketineni"><button class="primaryButton">listen now</button></a>
             </div>
             <div class="right">
                 <div class="swiper-container mySwiper">
