--- a/team/index.html
+++ b/team/index.html
@@ -198,7 +198,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="click-link" href="../sponsors">
+                            <a class="click-link" href="../sponsors/partner-with-us/">
                                 <img class="nav-icon" src="../src/assets/Navicons/icons8-helping-hand-100.png" alt="">
                                 <span class="sub-main">
                                    <span>partner with us<i class="sub-main-arrow fa fa-angle-right"></i></span>
@@ -209,7 +209,7 @@
                         <span class="circle"></span>
                     </ul>
                 </li>
-                <li><a class="navlink-border click-link" href=""><span class="main-link"><img class="main-nav-icon" src="../src/assets/Navicons/icons8-shopaholic-96.png" alt="">shop</span></a></li>
+                <li><a class="navlink-border click-link" target="_blank" href="https://narkha.com/collections/velocita-racing"><span class="main-link"><img class="main-nav-icon" src="../src/assets/Navicons/icons8-shopaholic-96.png" alt="">shop</span></a></li>
                 <li class="sub-nav"><a class="navlink-border" href="javascript:void(0);"><span class="main-link"><img class="main-nav-icon" src="../src/assets/Navicons/icons8-view-more-100.png" alt="">more</span><i class="arrow fa fa-angle-right"></i></a>
                     <ul class="dropdown">
                         <span class="sub-nav-heading">more from velocita</span>
