--- a/links/index.html
+++ b/links/index.html
@@ -17,7 +17,7 @@
 
     <div class="container">
         <a href="../../"><button>website</button></a>
-        <a href=""><button>shop</button></a>
+        <a href="https://narkha.com/collections/velocita-racing"><button>shop</button></a>
         <a href="../sponsors/"><button>sponsors</button></a>
         <a href="https://youtu.be/vUrGiPGBkOY"><button>orientaion</button></a>
         <a href="http://www.msrit.edu/"><button>msrit</button></a>
