--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
                         <br><br> New Summer Collection out now! Shop now on Narkha and avail a flat 20% off on our merchandise.
                     </span>
                 </div>
-                < <a target="_blank" href="https://narkha.com/collections/velocita-racing"><button class="primaryButton">shop now</button></a>
+                <a target="_blank" href="https://narkha.com/collections/velocita-racing"><button class="primaryButton">shop now</button></a>
             </div>
             <div class="right">
                 <div class="swiper-container mySwiper">
