--- a/sponsors/partner-with-us/index.html
+++ b/sponsors/partner-with-us/index.html
@@ -438,7 +438,7 @@
                 </div>
                 <span>brochure</span>
                 <p>Download our brochure and read about various sponsor benifits.</p>
-                <button class="primaryButton">read now</button>
+                <a class="link-button" href="../brochure/"><button class="primaryButton">read now</button></a>
             </div>
             <div class="right">
     
