--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                     <span class="about-intro">To be better than ever. Stay tuned for insights!
                     </span>
                 </div>
-                <button class="primaryButton">learn more</button>
+                <a href="javascript:void(0);"><button class="primaryButton">learn more</button></a>
             </div>
             <div class="right">
                 <div class="blue-box-container">
@@ -963,7 +963,7 @@
         <script src="./src/js/noRightClick.js"></script>
 
         <!-- Scroll Top on Page Refresh -->
-        <!-- <script src="./src/js/refresh.js"></script> -->
+        <script src="./src/js/refresh.js"></script>
 
         <!-- Testing -->
         <script src="./src/js/test.js"></script>
