--- a/links/index.html
+++ b/links/index.html
@@ -16,10 +16,11 @@
     <img src="../src/assets/Logo/VR-new-logo.webp" alt="">
 
     <div class="container">
+        <a href="https://forms.gle/EbqojHfPuUFtWzqv8"><button>quiz reg</button></a>
         <a href="../../"><button>website</button></a>
         <a href="https://narkha.com/collections/velocita-racing"><button>shop</button></a>
         <a href="../sponsors/"><button>sponsors</button></a>
-        <a href="https://youtu.be/vUrGiPGBkOY"><button>orientaion</button></a>
+        <!-- <a href="https://youtu.be/vUrGiPGBkOY"><button>orientaion</button></a> -->
         <a href="http://www.msrit.edu/"><button>msrit</button></a>
         <a href="https://anchor.fm/pranay-ketineni/"><button>podcast</button></a>
     </div>
