--- a/index.html
+++ b/index.html
@@ -912,10 +912,10 @@
                     <div class="underline"></div>
                     <!-- <p class="about">newsletter</p> -->
                     <button id="support" class="secondaryButton">SUBSCRIBE</button>
-                        <div class="subs">
+                        <!-- <div class="subs">
                             <input id="inp" type="text" placeholder="Enter Email ID">
                             <button id="tick">&#10004;</button>
-                        </div>
+                        </div> -->
                 </div>
                 <div class="btns">
                     <p class="heading">SUPPORT US</p>
