--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -64,7 +64,7 @@
 
     <!-- General/ Facebook -->
     <meta property="og:title" content="Velocita Racing | FSAE TEAM | INDIA" />
-    <meta property="og:url" content="https://velocitaracing.github.io" />
+    <meta property="og:url" content="https://velocitaracing.github.io/sponsors" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka." />
     <meta property="og:image" content="https://velocitaracing.github.io/src/assets/Logo/image.png" />
