--- a/sponsors/partner-with-us/index.html
+++ b/sponsors/partner-with-us/index.html
@@ -15,9 +15,7 @@
 
     <!-- Site Details -->
     <title>Partner With Us | Velocita Racing</title>
-    <meta name="description" content="Velocita Racing is the exclusive combustion class FSAE team of Ramaiah Institute of Technology, Bengaluru, Karnataka. 
-    This team comprises of 35 passionate and enthusiastic undergraduate students from various departments, who are continuously working 
-    on the development of racing grade vehicles for various competitions across India.">
+    <meta name="description" content="Sponosors for velocita racing, India. Learn more about the driving force behind Velocita Racing.">
     <meta name="keywords" content="velocita racing, Velocita, Racing, Bangalore, velocita website, Formula Bharat, FSAE, Formula Student, Formula1, FSG, velocita racing website, Bengaluru, Karnataka, India, Ramaiah Institute of Technology, Velocita Blog, FSAE team india, VRF-1, VRF-2, VR-1, VR-2, Ramaiah Racing Team, RIT, Ramaiah Mechanical Department">
     <meta name="author" content="Soumyadeep Guchhait" />
 
@@ -66,7 +64,7 @@
 
     <!-- General/ Facebook -->
     <meta property="og:title" content="Velocita Racing | FSAE TEAM | INDIA" />
-    <meta property="og:url" content="https://velocitaracing.github.io" />
+    <meta property="og:url" content="https://velocitaracing.github.io/sponsors/partner-with-us" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka." />
     <meta property="og:image" content="https://velocitaracing.github.io/src/assets/Logo/image.png" />
