--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -15,7 +15,7 @@
 
     <!-- Site Details -->
     <title>Sponsors | Velocita Racing</title>
-    <meta name="description" content="Sponsors for Velocita Racing. They are one the finest in their area. Having them in our family is a great opportinity for both as we learn and grow together, right from expertise advice to get hands on experience. ">
+    <meta name="description" content="Sponsors for Velocita Racing, India. They are one the finest in their area. Having them in our family is a great opportinity for both as we learn and grow together, right from expertise advice to get hands on experience. ">
     <meta name="keywords" content="velocita racing, Velocita, velocita sponsors, velocita racing sponsors, Racing, Bangalore, velocita website, Formula Bharat, FSAE, Formula Student, Formula1, FSG, velocita racing website, Bengaluru, Karnataka, India, Ramaiah Institute of Technology, Velocita Blog, FSAE team india, VRF-1, VRF-2, VR-1, VR-2, Ramaiah Racing Team, RIT, Ramaiah Mechanical Department">
     <meta name="author" content="Soumyadeep Guchhait" />
 
