--- a/sponsors/partner-with-us/index.html
+++ b/sponsors/partner-with-us/index.html
@@ -15,7 +15,7 @@
 
     <!-- Site Details -->
     <title>Partner With Us | Velocita Racing</title>
-    <meta name="description" content="Sponosors for velocita racing, India. Learn more about the driving force behind Velocita Racing.">
+    <meta name="description" content="Become a sponosor for Velocita Racing, India. Reacha huge audience. Learn more about ways to support.">
     <meta name="keywords" content="velocita racing, Velocita, Racing, Bangalore, velocita website, Formula Bharat, FSAE, Formula Student, Formula1, FSG, velocita racing website, Bengaluru, Karnataka, India, Ramaiah Institute of Technology, Velocita Blog, FSAE team india, VRF-1, VRF-2, VR-1, VR-2, Ramaiah Racing Team, RIT, Ramaiah Mechanical Department">
     <meta name="author" content="Soumyadeep Guchhait" />
 
