--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
        
         "@type": "SportsTeam",
         "name": "Velocita Racing",
-        "logo": "https://velocitaracing.github.io/favicon/android-icon-96x96",
+        "logo": "https://velocitaracing.github.io/favicon/android-icon-144x144.png",
         "foundingDate": "2015",
     	 "founders": [
             {
