--- a/about/index.html
+++ b/about/index.html
@@ -105,8 +105,8 @@
     <meta name="image" property="og:image" content="https://velocitaracing.github.io/src/assets/Logo/image.png" />
 
     <!-- General/ Facebook -->
-    <meta property="og:title" content="Velocita Racing | FSAE TEAM | INDIA" />
-    <meta property="og:url" content="https://velocitaracing.github.io" />
+    <meta property="og:title" content="About" />
+    <meta property="og:url" content="https://velocitaracing.github.io/about" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka." />
     <meta property="og:image" content="https://velocitaracing.github.io/src/assets/Logo/image.png" />
@@ -116,7 +116,7 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@RacingVelocita" />
-    <meta name="twitter:title" content="Velocita Racing | FSAE Team | INDIA" />
+    <meta name="twitter:title" content="About | Velocita Racing" />
     <meta name="twitter:description" content="Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka. " />
     <meta name="twitter:image" content="https://velocitaracing.github.io/src/assets/Logo/image.png" />
     
