--- a/careers/index.html
+++ b/careers/index.html
@@ -59,10 +59,10 @@
     <meta name="image" property="og:image" content="https://velocitaracing.github.io/src/assets/Logo/image.png" />
 
     <!-- General/ Facebook -->
-    <meta property="og:title" content="Student Careers at Velocita Racing" />
+    <meta property="og:title" content="Student Careers" />
     <meta property="og:url" content="https://velocitaracing.github.io/careers" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka." />
+    <meta property="og:description" content="Student Careers at Velocita Racing" />
     <meta property="og:image" content="https://velocitaracing.github.io/src/assets/Logo/image.png" />
     <meta property="og:image:width" content="180" />
     <meta property="og:image:height" content="110" />
@@ -71,7 +71,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@RacingVelocita" />
     <meta name="twitter:title" content="Student Careers at Velocita Racing" />
-    <meta name="twitter:description" content="Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka. " />
+    <meta name="twitter:description" content="Student careers at Velocita Racing. " />
     <meta name="twitter:image" content="https://velocitaracing.github.io/src/assets/Logo/image.png" />
     
     <!-- Schema/ Google Rich results -->
