--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./src/style/app.css">
    
-   
+    <!-- JS -->
+    <script src="./src/js/test.js"></script>
 
 </head>
 <body>
@@ -309,6 +310,11 @@
 
     </div>
 
+
+    <!-- Marker Car -->
+
+    <!-- <img class="marker" src="./src/assets/Home/marker car.png" alt=""> -->
+
     <!-- Home -->
 
     <section id="home">
@@ -467,14 +473,14 @@
                 </div>
                 <div class="car-info">
                     <div class="info">
-                        <img class="info-image" src="./src/assets/Maya/icons8-speed-96.png" alt="">
-                        <span class="info-value">80 Kmph</span>
-                        <span class="info-sub-value">top speed</span>
+                        <img class="info-image" src="./src/assets/Careers/tire.png" alt="">
+                        <span class="info-value">MRF ZTD1</span>
+                        <span class="info-sub-value">Slicks</span>
                     </div>
                     <div class="info">
-                        <img class="info-image" src="./src/assets/Maya/icons8-turbocharger-100.png" alt="">
-                        <span class="info-value">50 hp</span>
-                        <span class="info-sub-value">turbocharged</span>
+                        <img style="filter: brightness(0%)" class="info-image" src="./src/assets/Careers/Suspension.svg" alt="">
+                        <span class="info-value">Push Rod</span>
+                        <span class="info-sub-value">Suspension</span>
                     </div>
                     <div class="info">
                         <img class="info-image" src="./src/assets/Maya/icons8-piston-96.png" alt="">
@@ -823,7 +829,7 @@
                 <div class="heading">
                     <h1>podcast</h1>
                     <div class="underline">
-                        <span class="curve insights-curve"><span class="inner-circle"></span></span>
+                        <span class="curve insights-curve"><span class="inner-circle marker-end"></span></span>
                         <span class="side-line podcast-side-line"></span>
                     </div>
                     <span>racing journey podcast</span>
@@ -966,7 +972,7 @@
         <script src="./src/js/refresh.js"></script>
 
         <!-- Testing -->
-        <script src="./src/js/test.js"></script>
+        
       
 </body>
 </html>
