--- a/careers/index.html
+++ b/careers/index.html
@@ -297,7 +297,7 @@
 
     <!-- Life at velocita -->
 
-    <section id="life">
+    <!-- <section id="life">
         <div class="container">
             <div class="left">
                 <h1>life at velocita</h1>
@@ -316,10 +316,10 @@
 
         <div class="container container-right">
             <div class="left">
-                <!-- <h1>life at velocita</h1>
+                <h1>life at velocita</h1>
                 <div class="underline">
                     
-                </div> -->
+                </div>
                 <span>Learn as you grow</span>
                 <p>Here at Velocita we don't expect you to know everything. Learning takes place gradually with the guidance of our senior enigneers. At Velocita learn something new everyday.<p>
                 <button class="primaryButton">learn more</button>
@@ -330,7 +330,7 @@
             <span class="side-line insights-side-line"></span>       
         </div>
         <span class="side-line insights-side-line"></span>
-    </section>
+    </section> -->
 
     <!-- Career Areas/ Sub-system -->
 
