--- a/crowdfunding/index.html
+++ b/crowdfunding/index.html
@@ -632,7 +632,10 @@
 
                 <span id="proceed-for-payment"> Click Proceed to continue to Payment</span>
 
-                <div id="loading-alert"><img src="./__Iphone-spinner-1.gif" alt=""></div>
+                <div id="loading-alert">
+                  <!-- <img src="./__Iphone-spinner-1.gif" alt=""> -->
+                  <span>Loading...</span>
+                </div>
 
                 <!-- <span id="link-expired">The paymet link has expired<br>Refresh the page to make a new payment</span> -->
                 
