--- a/crowdfunding/index.html
+++ b/crowdfunding/index.html
@@ -536,7 +536,7 @@
                             </div>
                             <div class="pure-u-1-2 pure-u-md-1-3">
                                 <label for="multi-city">Pin Code</label>
-                                <input name="Pin Code" type="text" id="pincode" class="pure-u-23-24" />
+                                <input name="Pin Code" type="tel" id="pincode" class="pure-u-23-24" />
                             </div>
                             <div class="pure-u-1 pure-u-md-1-3 state-select">
                                 <label for="multi-state">State</label>
@@ -609,7 +609,7 @@
                             <input name="checkbox" type="checkbox" id="multi-terms" /> I&#x27;ve read the terms and conditions
                           </label> -->
 
-                          <a id="edit-money">Edit Money</a>
+                          <a id="edit-money">Edit Amount</a>
                         </div>
                           
 
