--- a/crowdfunding/index.html
+++ b/crowdfunding/index.html
@@ -663,10 +663,10 @@
                     <a id="get-qr" href="javascript:void(0);">GET QR</a>
                   </div>
                   
-                  <p class="payment-instructions">Scan the QR code from your preferred payment app or click on the UPI button to pay.
+                  <p class="payment-instructions">Click on 'GET QR' to generate QR code. Scan the QR code from your preferred payment app or click on the 'UPI button' (Availabe on mobile devices).
                     <br><br>Transaction confirmation will be sent via e-mail withing 24 hours of transaction.
-                      You can click "FINISH" after confirmation shows on your payment app.
-                    <br>For any queries write to us at velocitaracing.rit@gmail.com
+                    <br><br>    You can click "FINISH" after confirmation shows on your payment app.
+                  <br><br>For any queries write to us at velocitaracing.rit@gmail.com
                   </p>
                 </div>
 
