--- a/crowdfunding/index.html
+++ b/crowdfunding/index.html
@@ -698,7 +698,7 @@
 
               <div id="thank-you" class="modal">
                 <p></p>
-                <a href="#" rel="modal:close" class="next-button">CLOSE</a>
+                <a id="close-process" href="#" rel="modal:close" class="next-button">CLOSE</a>
               </div>
                 
 
