--- a/crowdfunding/index.html
+++ b/crowdfunding/index.html
@@ -431,7 +431,11 @@
             <h2 class="page-name">Payment Details</h2>
             <div id="block-one" class="heading">
               
-              <h1 id="slab-name">1C Engine <a href="#info-one" rel="modal:open"><img class="info-icon" src="../src/assets/Navicons/icons8-info-128.png" alt=""></a></h1>
+              <div class="head-info">
+                <h1 id="slab-name">1C Engine</h1>
+                <a id="info-click" href="#info-one" rel="modal:open"><img class="info-icon" src="../src/assets/Navicons/icons8-info-128.png" alt=""></a>
+              </div>
+              
               <p id="slab-details">You have chosen the <span id="worth-details">cones worth INR 100</span>. This will help us buy various crutial and critical items to manufacture our vehicle. 
                 Thank you for your generous help.
                 <br><br> We appretiate your kind help and in return we have some goodies for you. <!-- Link to open the modal -->
@@ -694,7 +698,7 @@
                   <input id="text" class="mytext" type="text" value="upi://pay?cu=INR&pa=satvikcrvk718-1@oksbi&pn=Satvik%20S.&am=100&tn=Velocita%20Racing%20Crowdfunding%20Cones" style="width:80%" disabled/><br />
 <div id="qrcode"></div>
                   <!-- <div id="pay-load" class="loader"></div> -->
-                  <p class="upi-id">velocitaracing@oksbi</p>
+                  <p class="upi-id">satvikcrvk718-1@oksbi</p>
                   <div class="qr-buttons">
                     <a id="mobile-upi" class="upi-button" href="upi://pay?cu=INR&pa=satvikcrvk718-1@oksbi&pn=Satvik%20S.&am=100&tn=Velocita%20Racing%20Crowdfunding%20Cones"><img class="upi-image" src="./Preview.jpg" alt=""></a>
                     <a id="get-qr" href="javascript:void(0);">GET QR</a>
