--- a/about/index.html
+++ b/about/index.html
@@ -166,6 +166,8 @@
         </div>
         <div class="nav-links">
             <ul id="nav-ul" class="nav-ul">
+                <li><a class="navlink-border click-link" href="../crowdfunding/"><span class="main-link"><img class="main-nav-icon" src="../src/assets/Navicons/icons8-crowdfunding-100.png" alt="">Crowdfunding</span></a></li>
+
                 <li><a class="navlink-border click-link" href="../"><span class="main-link"><img class="main-nav-icon" src="../src/assets/Navicons/icons8-home-page-96.png" alt="">home</span></a></li>
                 <li class="sub-nav"><a class="navlink-border" href="javascript:void(0);"><span class="main-link"><img class="main-nav-icon" src="../src/assets/Navicons/icons8-info-128.png" alt="">about</span><i class="arrow fa fa-angle-right"></i></a>
                     <ul class="dropdown">
