--- a/crowdfunding/index.html
+++ b/crowdfunding/index.html
@@ -173,6 +173,8 @@
       </div>
       <div class="nav-links">
           <ul id="nav-ul" class="nav-ul">
+            <li><a class="navlink-border click-link" href="../crowdfunding/"><span class="main-link"><img class="main-nav-icon" src="../src/assets/Navicons/icons8-crowdfunding-100.png" alt="">Crowdfunding</span></a></li>
+
               <li><a class="navlink-border click-link" href="../"><span class="main-link"><img class="main-nav-icon" src="../src/assets/Navicons/icons8-home-page-96.png" alt="">home</span></a></li>
               <li class="sub-nav"><a class="navlink-border" href="javascript:void(0);"><span class="main-link"><img class="main-nav-icon" src="../src/assets/Navicons/icons8-info-128.png" alt="">about</span><i class="arrow fa fa-angle-right"></i></a>
                   <ul class="dropdown">
@@ -466,12 +468,6 @@
             <li>Newsletter Subscription</li>
             <li>Shout out on Website</li>
             <li>Invite to unveil</li>
-            <!-- <li>Offer on official merchandise</li>
-            <li>Wrist band</li>
-            <li>Badges</li>
-            <li>Diary</li>
-            <li>Name on car</li>
-            <li>Invite to the workshop and track day.</li> -->
           </ul>
           
           <a href="#" rel="modal:close" class="next-button">close</a>
