--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
     <div id="ex1" class="modal">
         <img src="./crowdfunding/modal.png" alt="">
-        <a href="#" rel="modal:close" class="close-button">Support Now</a>
+        <a href="./crowdfunding/" class="close-button">Support Now</a>
     </div>
 
       
