--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                             <div data-aos="zoom-in" class="equal newsletter-box">
                                 <div class="cover">
                                     <span>Ignition Times</span>
-                                    <span class="sub-heading">May Special Edition Out now</span>
+                                    <span class="sub-heading">June Edition Out now</span>
                                 </div>
                             </div>                            
                             <div data-aos="zoom-in" class="equal twitter-box">
