--- a/links/index.html
+++ b/links/index.html
@@ -16,7 +16,7 @@
     <img src="../src/assets/Logo/VR-new-logo.webp" alt="">
 
     <div class="container">
-        <a href="../crowdfunding/"><button>crowdfunding</button></a>
+        <a href="../crowdfunding/"><button class="small">crowdfunding</button></a>
 
         <!-- <a href="https://forms.gle/EbqojHfPuUFtWzqv8"><button>quiz reg</button></a> -->
         <a href="https://docs.google.com/forms/d/1sL7J2X99egLT_LOPX-fvdlR-BI7ff9GA14RT2dZNH_w/viewform?edit_requested=true"><button>Alumni reg</button></a>
