--- a/crowdfunding/index.html
+++ b/crowdfunding/index.html
@@ -31,6 +31,16 @@
         ga('send', 'pageview');
     </script>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-23XM5Z8X90"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-23XM5Z8X90');
+    </script>
+
     <!-- Favicon -->
     <meta name="thumbnail" content="https://velocitaracing.github.io/favicon/android-icon-96x96" />
     <link rel="shortcut icon" href="https://velocitaracing.github.io/favicon/android-icon-48x48.png">
