--- a/crowdfunding/index.html
+++ b/crowdfunding/index.html
@@ -32,13 +32,13 @@
     </script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-23XM5Z8X90"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5CWW0MDNHB"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-23XM5Z8X90');
+      gtag('config', 'G-5CWW0MDNHB');
     </script>
 
     <!-- Favicon -->
