--- a/crowdfunding/index.html
+++ b/crowdfunding/index.html
@@ -31,14 +31,14 @@
         ga('send', 'pageview');
     </script>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5CWW0MDNHB"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XTJGD05B1C"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-5CWW0MDNHB');
+      gtag('config', 'G-XTJGD05B1C');
     </script>
 
     <!-- Favicon -->
