--- a/crowdfunding/index.html
+++ b/crowdfunding/index.html
@@ -367,7 +367,7 @@
         <div data-aos="zoom-in" class="number"><span id="contrib" class="rupees"></span> Contributors</div>
         <div data-aos="zoom-in" class="razorpay">
           <!-- <a id="" class="raz-button" href="https://pages.razorpay.com/velocitaracing">Pay Now</a> -->
-          <div data-aos="zoom-in" class="number"><span id="" class="rupees">0</span> Days up</div>
+          <div data-aos="zoom-in" class="number"><span id="" class="rupees">3</span> Days up</div>
           <!-- <button class="secondaryButton secondary-dark-button stats-pay-button">SUPPORT NOW</button> -->
           <!-- <form class="rPayButton">
             <script src = "https://cdn.razorpay.com/static/widget/payment-button.js"
@@ -1028,7 +1028,7 @@
       
     </section>
 
-    <!-- <section id="contributors">
+    <section id="contributors">
       <div class="cont-text">
         <h1 data-aos="fade-up" >Contributors</h1>
         <div data-aos="zoom-in" class="underline"></div>
@@ -1037,15 +1037,15 @@
 
       <div class="names">
         <ul data-aos="zoom-in" id="myNames">
-          <li>Niranjan &nbsp;.&nbsp;</li>
+          <!-- <li>Niranjan &nbsp;.&nbsp;</li>
           <li>Pranay &nbsp;.&nbsp;</li>
           <li>Deep &nbsp;.&nbsp;</li>
           <li>Satvik &nbsp;.&nbsp;</li>
-          <li>Deep</li>
+          <li>Deep</li> -->
         </ul>
       </div>
 
-    </section> -->
+    </section>
 
       
   </section>
