--- a/crowdfunding/index.html
+++ b/crowdfunding/index.html
@@ -367,7 +367,7 @@
         <div data-aos="zoom-in" class="number"><span id="contrib" class="rupees"></span> Contributors</div>
         <div data-aos="zoom-in" class="razorpay">
           <!-- <a id="" class="raz-button" href="https://pages.razorpay.com/velocitaracing">Pay Now</a> -->
-          <div data-aos="zoom-in" class="number"><span id="" class="rupees">3</span> Days up</div>
+          <div data-aos="zoom-in" class="number"><span id="day" class="rupees"></span> Days up</div>
           <!-- <button class="secondaryButton secondary-dark-button stats-pay-button">SUPPORT NOW</button> -->
           <!-- <form class="rPayButton">
             <script src = "https://cdn.razorpay.com/static/widget/payment-button.js"
@@ -613,6 +613,14 @@
                       <div id="step-one-form">
                         <legend>Payee Details</legend>
                         <div class="pure-g">
+                            <!-- <div class="pure-u-1-4 pure-u-md-1-3 state-select">
+                              <label for="multi-state">State</label>
+                              <select name="State" id="multi-state" class="pure-input-3-4">
+                                  <option value="Uttar Pradesh">Mr.</option>
+                                  <option value="Uttarakhand">Ms.</option>
+                                  <option value="West Bengal">Mrs.</option>
+                              </select>
+                            </div> -->
                             <div class="pure-u-5-6 pure-u-md-1-3">
                                 <label for="multi-first-name">First Name</label>
                                 <input name="First Name" type="text" id="multi-first-name" class="pure-u-23-24" required=""  />
