--- a/crowdfunding/index.html
+++ b/crowdfunding/index.html
@@ -411,18 +411,18 @@
         <div class="left">
           <!-- <h3>Select Your Slab</h3> -->
           <div class="card-container">
-            <div class="card slabs slab-1 slab-active">
+            <!-- <div class="card slabs slab-1 slab-active">
               <img src="./crowdfundingicons/Asset 12.png" alt="">
               <span class="amt-name">1C Engine</span>
               <span class="amt">INR 100</span>
               <i class="fa fa-arrow-right fa-2x card-arrow arrow-active"></i>
               <a href="#payment-box-reload" class="pay-mobile-card pay-active">PAY NOW</a>
-            </div>
-            <div id="hello" class="card slabs slab-2">        
+            </div> -->
+            <div id="hello" class="card slabs slab-2 slab-active">        
               <img src="./crowdfundingicons/Asset 3.png" alt="">
               <span class="amt-name">V2 (V Twin)</span>
               <span class="amt">INR 500</span>
-              <i class="fa fa-arrow-right fa-2x card-arrow"></i>
+              <i class="fa fa-arrow-right fa-2x card-arrow arrow-active"></i>
               <a href="#payment-box-reload" class="pay-mobile-card">PAY NOW</a>
             </div>
             <div class="card slabs slab-3">
@@ -572,7 +572,7 @@
               </div> -->
 
               <div class="razorpay-payment">
-                <p class="payment-raz">Pay using Razorpay</p>
+                <!-- <p class="payment-raz">Pay using Razorpay</p> -->
               <!-- <form class="raz">
                 <script src = "https://cdn.razorpay.com/static/widget/payment-button.js"
                 data-payment_button_id = "pl_FNmjTJSGXBYIfp"
@@ -590,8 +590,8 @@
                 </script>
               </div> -->
 
-                <a id="#raz-but" class="raz-button" href="https://pages.razorpay.com/velocitaracing">Pay Now</a>
-                <img class="raz-img" src="./powered_by_razorpay.png" alt="">
+                <!-- <a id="#raz-but" class="raz-button" href="https://pages.razorpay.com/velocitaracing">Pay Now</a> -->
+                <!-- <img class="raz-img" src="./powered_by_razorpay.png" alt=""> -->
               
                   
               </div>
