--- a/crowdfunding/index.html
+++ b/crowdfunding/index.html
@@ -769,12 +769,12 @@
                   <!-- <p>Thanks for clicking. That felt good.</p> -->
                   <!-- <img id="qr-generate" class="qr" src="./QRS/QR.png" alt=""> -->
                   
-                  <input id="text" class="mytext" type="text" value="upi://pay?cu=INR&pa=40121360059@SBIN0010500.ifsc.npci&pn=Satvik S.&am=500&tn=Velocita%20Racing%20Crowdfunding%20Cones&aid=uGICAgICNoKyPZw" style="width:80%" disabled/><br />
+                  <input id="text" class="mytext" type="text" value="upi://pay?cu=INR&pa=satvikcrvk718-1@oksbi&pn=Satvik S.&am=500&tn=Velocita%20Racing%20Crowdfunding%20Cones&aid=uGICAgICNoKyPZw" style="width:80%" disabled/><br />
                     <div id="qrcode"></div>
                   <!-- <div id="pay-load" class="loader"></div> -->
                   <p class="upi-id">satvikcrvk718-1@oksbi</p>
                   <div class="qr-buttons">
-                    <a id="mobile-upi" class="upi-button" href="upi://pay?cu=INR&pa=40121360059@SBIN0010500.ifsc.npci&pn=Satvik S.&am=500&tn=Velocita%20Racing%20Crowdfunding%20Cones&aid=uGICAgICNoKyPZw"><img class="upi-image" src="./Preview.jpg" alt=""></a>
+                    <a id="mobile-upi" class="upi-button" href="upi://pay?cu=INR&pa=satvikcrvk718-1@oksbi&pn=Satvik S.&am=500&tn=Velocita%20Racing%20Crowdfunding%20Cones&aid=uGICAgICNoKyPZw"><img class="upi-image" src="./Preview.jpg" alt=""></a>
                     <a id="get-qr" href="javascript:void(0);">GET QR</a>
                   </div>
                   
